W-18145935: mule-extensions-maven-plugin not adding element descriptions to generated docs